--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> <a href="http://bit.ly/pftii-ctf-writeup">http://bit.ly/pftii-ctf-writeup</a></p>
   <p>di kirim ke email : <a href="mailto:me.ikhwanudin@gmail.com">me.ikhwanudin@gmail.com</a></p>
 </div>
+<div class="alert alert-danger">
+  <strong>Dilarang plagiat</strong>, untuk laporan yang terindikasi plagiat point tidak di anulir untuk kedua belah pihak.
+</div>
 <h5>Easy</h5>
 <div class="row">
   <div class="col-lg-12">
