--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#1">
   <div class="card-body">
     <h4 class="card-title">Format Flag</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
     <p class="card-text">hint : Semua format flag pakai pftii{}</p>
   </div>
 </div>
@@ -72,7 +72,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
+        <h4>Point : 1</h4>
         <h6>Hint : Semua format flag pakai pftii{}</h6>
         <p></p>
         <a href="/soal/Zm9ybWF0IGZsYWc=">/soal/Zm9ybWF0IGZsYWc=</a>
@@ -86,8 +86,8 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#2">
   <div class="card-body">
     <h4 class="card-title">cryptography 1</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
+    <p class="card-text">hint : hexadecimal</p>
   </div>
 </div>
 
@@ -102,8 +102,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 1</h4>
+        <h6>Hint : hexadecimal</h6>
         <p>pemanasan 70 66 74 69 69 7b 65 61 73 79 7d</p>
         <a href=""></a>
       </div>
@@ -134,7 +134,7 @@
       <div class="modal-body">
         <h4>Point : 5</h4>
         <h6>Hint : </h6>
-        <p></p>
+        <p>About</p>
         <a href="https://www.facebook.com/hmifittelkom/">https://www.facebook.com/hmifittelkom/</a>
       </div>
     </div>
@@ -152,8 +152,8 @@
 <div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#4">
   <div class="card-body">
     <h4 class="card-title">cryptography 2</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 10</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : double crypto</p>
   </div>
 </div>
 
@@ -168,8 +168,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 10</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 5</h4>
+        <h6>Hint : double crypto</h6>
         <p>boy is student at Institut Teknologi Telkom Purwokerto, he found this text on the class but he can't read this. your task is help boy to find the message MDEwMDEwMDEgMDExMDExMDAgMDExMDExMTEgMDExMTAxMTAgMDExMDAxMDEgMDEwMTAxMDEgMDEwMDAwMTAgMDExMDExMTEgMDExMTEwMDE=</p>
         <a href=""></a>
       </div>
@@ -180,8 +180,8 @@
 <div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#5">
   <div class="card-body">
     <h4 class="card-title">cryptography 3</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : jangan tertipu dengan exe</p>
   </div>
 </div>
 
@@ -196,8 +196,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 15</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 5</h4>
+        <h6>Hint : jangan tertipu dengan exe</h6>
         <p></p>
         <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac</a>
       </div>
