--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <div class="card-body">
     <h4 class="card-title">Follow & Focus</h4>
     <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : </p>
+    <p class="card-text">hint : About</p>
   </div>
 </div>
 
@@ -133,8 +133,8 @@
       </div>
       <div class="modal-body">
         <h4>Point : 5</h4>
-        <h6>Hint : </h6>
-        <p>About</p>
+        <h6>Hint : About</h6>
+        <p></p>
         <a href="https://www.facebook.com/hmifittelkom/">https://www.facebook.com/hmifittelkom/</a>
       </div>
     </div>
