--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
     <div class="container">
       <div class="alert alert-primary" role="alert">
   <p>subject: <code>no-kelompok_nama-kelompok_nama-lengkap_title-soal</code> example: <code>21_slack_Mukhlis-ade_steganography</code></p>
-  <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> <a href="http://bit.ly/pftii-ctf-writeup">http://bit.ly/pftii-ctf-writeup</a></p>
-  <p>di kirim ke email : <a href="mailto:me.ikhwanudin@gmail.com">me.ikhwanudin@gmail.com</a></p>
+  <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> <a href="http://bit.ly/pftii-ctf-writeup2">http://bit.ly/pftii-ctf-writeup2</a></p>
+  <p>di kirim ke email : <a href="mailto:ctf.tugas@gmail.com">ctf.tugas@gmail.com</a></p>
 </div>
 <div class="alert alert-danger">
   <strong>Dilarang plagiat</strong>, untuk laporan yang terindikasi plagiat point tidak di anulir untuk kedua belah pihak.
 </div>
+
 <h5>Easy</h5>
 <div class="row">
   <div class="col-lg-12">
@@ -56,7 +57,7 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#1">
   <div class="card-body">
     <h4 class="card-title">Format Flag</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
     <p class="card-text">hint : Semua format flag pakai pftii{}</p>
   </div>
 </div>
@@ -72,7 +73,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 1</h4>
+        <h4>Point : 0</h4>
         <h6>Hint : Semua format flag pakai pftii{}</h6>
         <p></p>
         <a href="/soal/Zm9ybWF0IGZsYWc=">/soal/Zm9ybWF0IGZsYWc=</a>
@@ -86,7 +87,7 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#2">
   <div class="card-body">
     <h4 class="card-title">cryptography 1</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
     <p class="card-text">hint : hexadecimal</p>
   </div>
 </div>
@@ -102,7 +103,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 1</h4>
+        <h4>Point : 0</h4>
         <h6>Hint : hexadecimal</h6>
         <p>pemanasan 70 66 74 69 69 7b 65 61 73 79 7d</p>
         <a href=""></a>
@@ -116,7 +117,7 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#3">
   <div class="card-body">
     <h4 class="card-title">Follow & Focus</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
     <p class="card-text">hint : About</p>
   </div>
 </div>
@@ -132,7 +133,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
+        <h4>Point : 0</h4>
         <h6>Hint : About</h6>
         <p></p>
         <a href="https://www.facebook.com/hmifittelkom/">https://www.facebook.com/hmifittelkom/</a>
@@ -144,21 +145,87 @@
     </div>
   </div>
 </div>
-<h5 class="mt-3">Medium</h5>
+<!-- easy 2 -->
 <div class="row">
-  <div class="col-lg-12">
+  <div class="col-lg-12 mt-3">
     <div class="card-deck">
-      <!-- Button trigger modal -->
-<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#4">
+        <!-- Button trigger modal -->
+<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#4">
   <div class="card-body">
-    <h4 class="card-title">cryptography 2</h4>
+    <h4 class="card-title">hash 5</h4>
     <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : double crypto</p>
+    <p class="card-text">hint : </p>
   </div>
 </div>
 
 <!-- Modal -->
 <div class="modal fade" id="4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">hash 5</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h4>Point : 5</h4>
+        <h6>Hint : </h6>
+        <p>4120b168150f5c548f7aa669a7dfbf76</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </div>
+</div>
+        <!-- Button trigger modal -->
+<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#5">
+  <div class="card-body">
+    <h4 class="card-title">hash 13</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : </p>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">hash 13</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h4>Point : 5</h4>
+        <h6>Hint : </h6>
+        <p>csgvv{GuvfEBGgvtnOrynf}</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </div>
+</div>
+        
+    </div>
+  </div>
+</div>
+
+<h5 class="mt-3">Medium</h5>
+<!-- medium 1 -->
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card-deck">
+      <!-- Button trigger modal -->
+<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#6">
+  <div class="card-body">
+    <h4 class="card-title">cryptography 2</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
+    <p class="card-text">hint : double crypto</p>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -168,7 +235,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
+        <h4>Point : 0</h4>
         <h6>Hint : double crypto</h6>
         <p>boy is student at Institut Teknologi Telkom Purwokerto, he found this text on the class but he can't read this. your task is help boy to find the message MDEwMDEwMDEgMDExMDExMDAgMDExMDExMTEgMDExMTAxMTAgMDExMDAxMDEgMDEwMTAxMDEgMDEwMDAwMTAgMDExMDExMTEgMDExMTEwMDE=</p>
         <a href=""></a>
@@ -177,16 +244,16 @@
   </div>
 </div>
       <!-- Button trigger modal -->
-<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#5">
+<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#7">
   <div class="card-body">
     <h4 class="card-title">cryptography 3</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
     <p class="card-text">hint : jangan tertipu dengan exe</p>
   </div>
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -196,10 +263,68 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
+        <h4>Point : 0</h4>
         <h6>Hint : jangan tertipu dengan exe</h6>
         <p></p>
         <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac</a>
+      </div>
+    </div>
+  </div>
+</div>
+      <!-- Button trigger modal -->
+<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#8">
+  <div class="card-body">
+    <h4 class="card-title">Find me</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
+    <p class="card-text">hint : </p>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Find me</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h4>Point : 15</h4>
+        <h6>Hint : </h6>
+        <p></p>
+        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.svg?alt=media&token=1fd7fd4c-7f52-4719-83af-490c3a49a8c2">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.svg?alt=media&token=1fd7fd4c-7f52-4719-83af-490c3a49a8c2</a>
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+    <div class="card-deck mt-3">
+      <!-- Button trigger modal -->
+<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#9">
+  <div class="card-body">
+    <h4 class="card-title">Wired</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
+    <p class="card-text">hint : </p>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Wired</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h4>Point : 15</h4>
+        <h6>Hint : </h6>
+        <p></p>
+        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe</a>
       </div>
     </div>
   </div>
@@ -212,29 +337,29 @@
   <div class="col-lg-12">
     <div class="card-deck">
       <!-- Button trigger modal -->
-<div class="card border-danger" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#">
+<div class="card border-danger" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#10">
   <div class="card-body">
-    <h4 class="card-title">coming soon</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : x</h6>
+    <h4 class="card-title">Kodkers</h4>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 20</h6>
     <p class="card-text">hint : </p>
   </div>
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">coming soon</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Kodkers</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : x</h4>
+        <h4>Point : 20</h4>
         <h6>Hint : </h6>
         <p></p>
-        <a href=""></a>
+        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0</a>
       </div>
     </div>
   </div>
