--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/">Soal <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/scoreboard-soal-klot1">scoreboard / soal</span></a>
+          <a class="nav-link" href="/scoreboard">scoreboard / soal</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">scoreboard utama</span></a>
@@ -294,7 +294,7 @@
         <h4>Point : 15</h4>
         <h6>Hint : </h6>
         <p></p>
-        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.svg?alt=media&token=1fd7fd4c-7f52-4719-83af-490c3a49a8c2">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.svg?alt=media&token=1fd7fd4c-7f52-4719-83af-490c3a49a8c2</a>
+        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a</a>
       </div>
     </div>
   </div>
