--- a/scoreboard/scoreboard-soal-klot2/index.html
+++ b/scoreboard/scoreboard-soal-klot2/index.html
@@ -42,48 +42,16 @@
       <h3>Scoreboard / soal</h3>
 <small>Hari 1 klot 2</small>
 progress
-<!-- <div class="row">
+<div class="row">
 	<div class="col-md-6 my-3">
 		<h5>Hash 5 <span class="badge badge-danger">5</span></h5>
 		<ul class="list-group">
-		  <li class="list-group-item">1. 9 - Akbar Borneo <span class="float-right badge badge-danger">8</span></li>
-		  <li class="list-group-item">2. 12 - Bahri <span class="float-right badge badge-warning">7</span></li>
-		  <li class="list-group-item">3. 18 - Rizky Ramadhan <span class="float-right badge badge-success">6</span></li>
-		  <li class="list-group-item">4. 17 - Muh. Rizal <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">5. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">6. 11 - Danang Wicaksana <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">7. 18 - Muh. Rifadh Mardiansyah <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">8. 12 - Reno Agil Saputra <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">5</span></li>
-		</ul>
-	</div>
-
-	<div class="col-md-6 my-3">
-		<h5>hash 13 <span class="badge badge-danger">5</span></h5>
-		<ul class="list-group">
-		  <li class="list-group-item">1. 19 - Rizky Aulia Fansyuri <span class="float-right badge badge-danger">8</span></li>
-		  <li class="list-group-item">2. 17 - AR Tambunan <span class="float-right badge badge-warning">7</span></li>
-		  <li class="list-group-item">3. 12 - Bahri <span class="float-right badge badge-success">6</span></li>
-		  <li class="list-group-item">4. 4 - Fajart NR <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">5. 18 - Rizky Ramadhan <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">6. 19 - Arnelka Hananta <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">7. 17 - Muh. faizal <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">8. 4 - Diaz Aztisyah <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">9. 11 - Danang Wicaksana <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">10. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
-		</ul>
-	</div>
-
-	<div class="col-md-6 my-3">
-		<h5>Find me <span class="badge badge-danger">15</span></h5>
-		<ul class="list-group">
-		  <li class="list-group-item">1. 12 - Bahri <span class="float-right badge badge-danger">8</span></li>
-		  <li class="list-group-item">2. 18 - Ramadhan <span class="float-right badge badge-warning">7</span></li>
-		  <li class="list-group-item">3. 11 - Danang Wicaksana <span class="float-right badge badge-success">6</span></li>
-		  <li class="list-group-item">4. 16 - Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">5. 18 - Muh. Rifadh Mardiansyah <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">6. none <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">1. 20 - Johanes Christianto Tiku<span class="float-right badge badge-danger">8</span></li>
+		  <li class="list-group-item">2. 18 - Rizky ramadhan <span class="float-right badge badge-warning">7</span></li>
+		  <li class="list-group-item">3. 18 - Muh Rifadh Mardiansya <span class="float-right badge badge-success">6</span></li>
+		  <li class="list-group-item">4. 5 - Gia Karisma Wiguna<span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">5. 5 - Bahri <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">6. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">7. none <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">8. none <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">5</span></li>
@@ -92,11 +60,43 @@ progress
 	</div>
 
 	<div class="col-md-6 my-3">
+		<h5>hash 13 <span class="badge badge-danger">5</span></h5>
+		<ul class="list-group">
+		  <li class="list-group-item">1. 18 - Rizky Ramadhan <span class="float-right badge badge-danger">8</span></li>
+		  <li class="list-group-item">2. 18 - Muh Rifadh Mardiansya <span class="float-right badge badge-warning">7</span></li>
+		  <li class="list-group-item">3. 20 - Johanes Christianto Tiku <span class="float-right badge badge-success">6</span></li>
+		  <li class="list-group-item">4. 5 - Gia Karisma Wiguna <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">5. 5 - Sindhu Purnama Santoso <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">6. 12 - Bahri <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">7. 17 - Muh. faizal <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">8. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">5</span></li>
+		</ul>
+	</div>
+
+	<div class="col-md-6 my-3">
+		<h5>Find me <span class="badge badge-danger">15</span></h5>
+		<ul class="list-group">
+		  <li class="list-group-item">1. 18 - Rendi Priambodo <span class="float-right badge badge-danger">18</span></li>
+		  <li class="list-group-item">2. 1 - Wildan Malul Azam <span class="float-right badge badge-warning">17</span></li>
+		  <li class="list-group-item">3. 11 - Danang Wicaksana <span class="float-right badge badge-success">16</span></li>
+		  <li class="list-group-item">4. 18 - Muh Rifadh Mardiansya <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">5. 5 - Sindhu Purnama Santoso <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">6. 12 - Bahri <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">7. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">8. 9 - Haris Pradana <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">15</span></li>
+		</ul>
+	</div>
+
+	<div class="col-md-6 my-3">
 		<h5>Wired <span class="badge badge-danger">15</span></h5>
 		<ul class="list-group">
-		  <li class="list-group-item">1. 12 - Bahri <span class="float-right badge badge-danger">13</span></li>
-		  <li class="list-group-item">2. 11 - Danang Wicaksana <span class="float-right badge badge-warning">12</span></li>
-		  <li class="list-group-item">3. 11 - Ahmad Fadhel Habibi <span class="float-right badge badge-success">11</span></li>
+		  <li class="list-group-item">1. none <span class="float-right badge badge-danger">13</span></li>
+		  <li class="list-group-item">2. none <span class="float-right badge badge-warning">12</span></li>
+		  <li class="list-group-item">3. none <span class="float-right badge badge-success">11</span></li>
 		  <li class="list-group-item">4. none <span class="float-right badge badge-primary">10</span></li>
 		  <li class="list-group-item">5. none <span class="float-right badge badge-primary">10</span></li>
 		  <li class="list-group-item">6. none <span class="float-right badge badge-primary">10</span></li>
@@ -110,19 +110,19 @@ progress
 	<div class="col-md-6 my-3">
 		<h5>Kodkers <span class="badge badge-danger">20</span></h5>
 		<ul class="list-group">
-		  <li class="list-group-item">1. 12 - Bahri <span class="float-right badge badge-danger">18</span></li>
-		  <li class="list-group-item">2. 18 - Rizky Ramadhan <span class="float-right badge badge-warning">17</span></li>
-		  <li class="list-group-item">3. 11 - Reyvaldi yanur <span class="float-right badge badge-success">16</span></li>
-		  <li class="list-group-item">4. 17 - Muh faizal <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">5. 11 - Danang Wicaksana <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">6. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">7. 3 - Fakhrul <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">8. 18 - Muh. Rifadh Mardiansyah <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">1. 11 - Danang Wicaksana <span class="float-right badge badge-danger">23</span></li>
+		  <li class="list-group-item">2. 20 - Johanes Christianto Tiku <span class="float-right badge badge-warning">22</span></li>
+		  <li class="list-group-item">3. 18 - Rizky ramadhan <span class="float-right badge badge-success">21</span></li>
+		  <li class="list-group-item">4. 1 - Wildan Malul Azam <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">5. 12 - Bahri <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">6. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">7. none <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">8. none <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">20</span></li>
 		</ul>
 	</div>
-</div> -->
+</div>
     </div>
 
     <!-- Optional JavaScript -->
