--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <!-- Button trigger modal -->
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#9">
   <div class="card-body">
-    <h4 class="card-title">weired</h4>
+    <h4 class="card-title">weird</h4>
     <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
     <p class="card-text">hint : </p>
   </div>
@@ -315,7 +315,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">weired</h5>
+        <h5 class="modal-title" id="exampleModalLabel">weird</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
