--- a/scoreboard/scoreboard-soal-klot2/index.html
+++ b/scoreboard/scoreboard-soal-klot2/index.html
@@ -86,8 +86,8 @@ progress
 		  <li class="list-group-item">6. 12 - Bahri <span class="float-right badge badge-primary">15</span></li>
 		  <li class="list-group-item">7. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">15</span></li>
 		  <li class="list-group-item">8. 9 - Haris Pradana <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">9. 15 - Didik Priyoga <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">10. 16 - MOHAMMAD ADITYA RIFKI F <span class="float-right badge badge-primary">15</span></li>
 		</ul>
 	</div>
 
