--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="alert alert-primary" role="alert">
   <p>subject: <code>no-kelompok_nama-kelompok_nama-lengkap_title-soal</code> example: <code>21_slack_Mukhlis-ade_steganography</code></p>
-  <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> <a href="http://bit.ly/pftii-ctf-writeup2">http://bit.ly/pftii-ctf-writeup2</a></p>
+  <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> http://bit.ly/pftii-ctf-writeup2</p>
   <p>di kirim ke email : <a href="mailto:ctf.tugas@gmail.com">ctf.tugas@gmail.com</a></p>
 </div>
 <div class="alert alert-danger">
