--- a/scoreboard/scoreboard-soal-klot2/index.html
+++ b/scoreboard/scoreboard-soal-klot2/index.html
@@ -52,10 +52,10 @@ progress
 		  <li class="list-group-item">4. 5 - Gia Karisma Wiguna<span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">5. 5 - Bahri <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">6. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">7. none <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">8. none <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">7. 18 - Zaky Hanif Testandy <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">8. 9 - Haris Pradana <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">9. 11 - Dewo Rajh Arnada <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">10. 16 - MOHAMMAD ADITYA RIFKI F <span class="float-right badge badge-primary">5</span></li>
 		</ul>
 	</div>
 
@@ -68,10 +68,10 @@ progress
 		  <li class="list-group-item">4. 5 - Gia Karisma Wiguna <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">5. 5 - Sindhu Purnama Santoso <span class="float-right badge badge-primary">5</span></li>
 		  <li class="list-group-item">6. 12 - Bahri <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">7. 17 - Muh. faizal <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">8. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">5</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">7. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">8. 15 - Didik Priyoga <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">9. 9 - Haris Pradana <span class="float-right badge badge-primary">5</span></li>
+		  <li class="list-group-item">10. 11 - Dewo Rajh Arnada <span class="float-right badge badge-primary">5</span></li>
 		</ul>
 	</div>
 
@@ -94,13 +94,13 @@ progress
 	<div class="col-md-6 my-3">
 		<h5>Wired <span class="badge badge-danger">15</span></h5>
 		<ul class="list-group">
-		  <li class="list-group-item">1. none <span class="float-right badge badge-danger">18</span></li>
-		  <li class="list-group-item">2. none <span class="float-right badge badge-warning">17</span></li>
-		  <li class="list-group-item">3. none <span class="float-right badge badge-success">16</span></li>
-		  <li class="list-group-item">4. none <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">5. none <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">6. none <span class="float-right badge badge-primary">15</span></li>
-		  <li class="list-group-item">7. none <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">1. 12 - Bahri <span class="float-right badge badge-danger">18</span></li>
+		  <li class="list-group-item">2. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-warning">17</span></li>
+		  <li class="list-group-item">3. 11 - Dewo Rajh Arnada <span class="float-right badge badge-success">16</span></li>
+		  <li class="list-group-item">4. 18 - Muh Rifadh Mardiansya <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">5. 20 - Johanes Christianto Tiku <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">6. 3 - MUHAMMAD FAKHRUDIN AZI <span class="float-right badge badge-primary">15</span></li>
+		  <li class="list-group-item">7. 18 - Rizky Ramadhan <span class="float-right badge badge-primary">15</span></li>
 		  <li class="list-group-item">8. none <span class="float-right badge badge-primary">15</span></li>
 		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">15</span></li>
 		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">15</span></li>
@@ -116,10 +116,10 @@ progress
 		  <li class="list-group-item">4. 1 - Wildan Malul Azam <span class="float-right badge badge-primary">20</span></li>
 		  <li class="list-group-item">5. 12 - Bahri <span class="float-right badge badge-primary">20</span></li>
 		  <li class="list-group-item">6. 16 - Ahmad Fadhel Habibi <span class="float-right badge badge-primary">20</span></li>
-		  <li class="list-group-item">7. none <span class="float-right badge badge-primary">20</span></li>
-		  <li class="list-group-item">8. none <span class="float-right badge badge-primary">20</span></li>
-		  <li class="list-group-item">9. none <span class="float-right badge badge-primary">20</span></li>
-		  <li class="list-group-item">10. none <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">7. 20 - Aris Rafael Tambunan <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">8. 8 - Muh Rifadh Mardiansya <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">9. 3 - MUHAMMAD FAKHRUDIN AZI <span class="float-right badge badge-primary">20</span></li>
+		  <li class="list-group-item">10. 15 - Mutia Putri Soliha <span class="float-right badge badge-primary">20</span></li>
 		</ul>
 	</div>
 </div>
