--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#4">
   <div class="card-body">
     <h4 class="card-title">hash 5</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
+    <p class="card-text">hint : md5</p>
   </div>
 </div>
 
@@ -169,8 +169,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 1</h4>
+        <h6>Hint : md5</h6>
         <p>4120b168150f5c548f7aa669a7dfbf76</p>
         <a href=""></a>
       </div>
@@ -181,8 +181,8 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#5">
   <div class="card-body">
     <h4 class="card-title">hash 13</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
+    <p class="card-text">hint : rot13</p>
   </div>
 </div>
 
@@ -197,8 +197,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 1</h4>
+        <h6>Hint : rot13</h6>
         <p>csgvv{GuvfEBGgvtnOrynf}</p>
         <a href=""></a>
       </div>
@@ -275,8 +275,8 @@
 <div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#8">
   <div class="card-body">
     <h4 class="card-title">Find me</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : under layer</p>
   </div>
 </div>
 
@@ -291,8 +291,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 15</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 5</h4>
+        <h6>Hint : under layer</h6>
         <p></p>
         <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a</a>
       </div>
@@ -305,8 +305,8 @@
 <div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#9">
   <div class="card-body">
     <h4 class="card-title">weird</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 15</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : js weired</p>
   </div>
 </div>
 
@@ -321,8 +321,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 15</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 5</h4>
+        <h6>Hint : js weired</h6>
         <p></p>
         <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe</a>
       </div>
@@ -340,8 +340,8 @@
 <div class="card border-danger" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#10">
   <div class="card-body">
     <h4 class="card-title">Kodkers</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 20</h6>
-    <p class="card-text">hint : </p>
+    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
+    <p class="card-text">hint : qrcode</p>
   </div>
 </div>
 
@@ -356,8 +356,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <h4>Point : 20</h4>
-        <h6>Hint : </h6>
+        <h4>Point : 5</h4>
+        <h6>Hint : qrcode</h6>
         <p></p>
         <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0</a>
       </div>
