--- a/index.html
+++ b/index.html
@@ -1,378 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>PFTII</title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-  <div class="container">
-    <a class="navbar-brand" href="/">PFTII</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Soal <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/scoreboard">scoreboard / soal</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">scoreboard utama</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Write Up</a>
-        </li>
-      </ul>
-    </div>
-    
-  </div>
-  
-</nav>
-    <div class="container">
-      <div class="alert alert-primary" role="alert">
-  <p>subject: <code>no-kelompok_nama-kelompok_nama-lengkap_title-soal</code> example: <code>21_slack_Mukhlis-ade_steganography</code></p>
-  <p>isi: upload jawaban dalam bentuk pdf sesuai format yang telah di share -> http://bit.ly/pftii-ctf-writeup2</p>
-  <p>di kirim ke email : <a href="mailto:ctf.tugas@gmail.com">ctf.tugas@gmail.com</a></p>
-</div>
-<div class="alert alert-danger">
-  <strong>Dilarang plagiat</strong>, untuk laporan yang terindikasi plagiat point tidak di anulir untuk kedua belah pihak.
-</div>
-
-<h5>Easy</h5>
-<div class="row">
-  <div class="col-lg-12">
-    <div class="card-deck">
-      <!-- <div class="col-md-3"> -->
-        <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#1">
-  <div class="card-body">
-    <h4 class="card-title">Format Flag</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
-    <p class="card-text">hint : Semua format flag pakai pftii{}</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Format Flag</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 0</h4>
-        <h6>Hint : Semua format flag pakai pftii{}</h6>
-        <p></p>
-        <a href="/soal/Zm9ybWF0IGZsYWc=">/soal/Zm9ybWF0IGZsYWc=</a>
-      </div>
-    </div>
-  </div>
-</div>
-      <!-- </div>  -->
-      <!-- <div class="col-md-3"> -->
-        <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#2">
-  <div class="card-body">
-    <h4 class="card-title">cryptography 1</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
-    <p class="card-text">hint : hexadecimal</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">cryptography 1</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 0</h4>
-        <h6>Hint : hexadecimal</h6>
-        <p>pemanasan 70 66 74 69 69 7b 65 61 73 79 7d</p>
-        <a href=""></a>
-      </div>
-    </div>
-  </div>
-</div>
-      <!-- </div> -->
-      <!-- <div class="col-md-3"> -->
-        <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#3">
-  <div class="card-body">
-    <h4 class="card-title">Follow & Focus</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
-    <p class="card-text">hint : About</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Follow & Focus</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 0</h4>
-        <h6>Hint : About</h6>
-        <p></p>
-        <a href="https://www.facebook.com/hmifittelkom/">https://www.facebook.com/hmifittelkom/</a>
-      </div>
-    </div>
-  </div>
-</div>
-      <!-- </div> -->
-    </div>
-  </div>
-</div>
-<!-- easy 2 -->
-<div class="row">
-  <div class="col-lg-12 mt-3">
-    <div class="card-deck">
-        <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#4">
-  <div class="card-body">
-    <h4 class="card-title">hash 5</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
-    <p class="card-text">hint : md5</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">hash 5</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 1</h4>
-        <h6>Hint : md5</h6>
-        <p>4120b168150f5c548f7aa669a7dfbf76</p>
-        <a href=""></a>
-      </div>
-    </div>
-  </div>
-</div>
-        <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#5">
-  <div class="card-body">
-    <h4 class="card-title">hash 13</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 1</h6>
-    <p class="card-text">hint : rot13</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">hash 13</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 1</h4>
-        <h6>Hint : rot13</h6>
-        <p>csgvv{GuvfEBGgvtnOrynf}</p>
-        <a href=""></a>
-      </div>
-    </div>
-  </div>
-</div>
-        
-    </div>
-  </div>
-</div>
-
-<h5 class="mt-3">Medium</h5>
-<!-- medium 1 -->
-<div class="row">
-  <div class="col-lg-12">
-    <div class="card-deck">
-      <!-- Button trigger modal -->
-<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#6">
-  <div class="card-body">
-    <h4 class="card-title">cryptography 2</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
-    <p class="card-text">hint : double crypto</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">cryptography 2</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 0</h4>
-        <h6>Hint : double crypto</h6>
-        <p>boy is student at Institut Teknologi Telkom Purwokerto, he found this text on the class but he can't read this. your task is help boy to find the message MDEwMDEwMDEgMDExMDExMDAgMDExMDExMTEgMDExMTAxMTAgMDExMDAxMDEgMDEwMTAxMDEgMDEwMDAwMTAgMDExMDExMTEgMDExMTEwMDE=</p>
-        <a href=""></a>
-      </div>
-    </div>
-  </div>
-</div>
-      <!-- Button trigger modal -->
-<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#7">
-  <div class="card-body">
-    <h4 class="card-title">cryptography 3</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 0</h6>
-    <p class="card-text">hint : jangan tertipu dengan exe</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">cryptography 3</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 0</h4>
-        <h6>Hint : jangan tertipu dengan exe</h6>
-        <p></p>
-        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/cryptography%201.zip?alt=media&token=31e2ce3c-6043-4bd4-a19d-48896da0b5ac</a>
-      </div>
-    </div>
-  </div>
-</div>
-      <!-- Button trigger modal -->
-<div class="card border-warning" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#8">
-  <div class="card-body">
-    <h4 class="card-title">Find me</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : under layer</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Find me</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : under layer</h6>
-        <p></p>
-        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/index.7z?alt=media&token=4de32aea-a76f-4a4f-8c59-83272361480a</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-    <div class="card-deck mt-3">
-      <!-- Button trigger modal -->
-<div class="card border-success" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#9">
-  <div class="card-body">
-    <h4 class="card-title">weird</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : js weired</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">weird</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : js weired</h6>
-        <p></p>
-        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/wired.txt?alt=media&token=79d35169-2f48-4f36-a216-907a912442fe</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>  
-  </div>
-</div>
-<h5 class="mt-3">Hard</h5>
-<div class="row">
-  <div class="col-lg-12">
-    <div class="card-deck">
-      <!-- Button trigger modal -->
-<div class="card border-danger" style="width: 20rem; cursor: pointer;" data-toggle="modal" data-target="#10">
-  <div class="card-body">
-    <h4 class="card-title">Kodkers</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Point : 5</h6>
-    <p class="card-text">hint : qrcode</p>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Kodkers</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h4>Point : 5</h4>
-        <h6>Hint : qrcode</h6>
-        <p></p>
-        <a href="https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0">https://firebasestorage.googleapis.com/v0/b/pftii2-telkom.appspot.com/o/kodkers.zip?alt=media&token=90512ad9-2cfd-4c8b-be41-99366ce6a8e0</a>
-      </div>
-    </div>
-  </div>
-</div>
-    </div>
-  </div>
-</div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  </body>
-</html>
+Done :D
